reestruturando bando de dados